添加版本号 和签名

--- a/plugin.xml
+++ b/plugin.xml
@@ -19,8 +19,8 @@
 -->
 
 <plugin xmlns="http://apache.org/cordova/ns/plugins/1.0"
-        id="cordova-plugin-device"
-        version="2.0.3">
+        id="cordova-plugin-mz-device"
+        version="2.0.4">
     <name>Device</name>
     <description>Cordova Device Plugin</description>
     <license>Apache 2.0</license>
