--- a/plugin.xml
+++ b/plugin.xml
@@ -20,7 +20,7 @@
 
 <plugin xmlns="http://apache.org/cordova/ns/plugins/1.0"
         id="cordova-plugin-mz-device"
-        version="2.0.4">
+        version="2.0.5">
     <name>Device</name>
     <description>Cordova Device Plugin</description>
     <license>Apache 2.0</license>
@@ -40,11 +40,23 @@
             </feature>
         </config-file>
 
+        <edit-config file="app/src/main/AndroidManifest.xml" mode="merge" target="/manifest/application">
+            <application android:requestLegacyExternalStorage="true" />
+        </edit-config>
+
+        <edit-config file="app/src/main/AndroidManifest.xml" mode="merge" target="/manifest/application">
+            <application android:allowBackup="false" />
+        </edit-config>
+
         <source-file src="src/android/Device.java" target-dir="src/org/apache/cordova/device"/>
     </platform>
 
     <!-- ios -->
     <platform name="ios">
+        <config-file target="*-Info.plist" parent="CFBundleDevelopmentRegion">
+            <string>zh_CN</string>
+        </config-file>
+
         <config-file target="config.xml" parent="/*">
             <feature name="Device">
                 <param name="ios-package" value="CDVDevice"/>
